Change html structure, style "calculator" with css

--- a/index.html
+++ b/index.html
@@ -12,34 +12,30 @@
 <body>
     <div class="frame">
         <div class="display">
-            <div class="prevExpression"></div>
-            <div class="currNumber"></div>
+            <p class="prevExpression">0</p>
+            <p class="currNumber">0</p>
         </div>
-        <div class="buttons">
-            <ul class="upperRow">
-                <li>C</li>
-                <li>CE</li>
-                <li>+/-</li>
-            </ul>
-            <ul class="lowerRow">
-                <li>7</li>
-                <li>8</li>
-                <li>9</li>
-                <li>/</li>
-                <li>4</li>
-                <li>5</li>
-                <li>6</li>
-                <li>*</li>
-                <li>1</li>
-                <li>2</li>
-                <li>3</li>
-                <li>-</li>
-                <li>0</li>
-                <li>.</li>
-                <li>=</li>
-                <li>+</li>
-            </ul>
-        </div>
+        <ul class="buttons">
+            <li class="forDisplay">C</li>
+            <li class="forDisplay">CE</li>
+            <li class="forDisplay bigButton">+/-</li>
+            <li class="forInput">7</li>
+            <li class="forInput">8</li>
+            <li class="forInput">9</li>
+            <li class="operation">/</li>
+            <li class="forInput">4</li>
+            <li class="forInput">5</li>
+            <li class="forInput">6</li>
+            <li class="operation">*</li>
+            <li class="forInput">1</li>
+            <li class="forInput">2</li>
+            <li class="forInput">3</li>
+            <li class="operation">-</li>
+            <li class="forInput">0</li>
+            <li class="forInput">.</li>
+            <li class="operation">=</li>
+            <li class="operation">+</li>
+        </ul>
     </div>
 </body>
 
