Make a few changes to project,look at full message
Overdue commit, several changes:
1   made a new object "calculator" with several
    methods to compute expressions.
2   added event listeners to number/dot buttons
    now they add their textContent to operand
    string.
3   added a listener to disable "." button after
    press. Shoudn't be more than one dot in the
    number. For that needed to change "ul" and
    "li" to "div" and "buttons"

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Calculator</title>
     <link rel="stylesheet" href="style.css">
-    <script src="script.js"></script>
+    <script src="script.js" defer></script>
 </head>
 
 <body>
@@ -15,27 +15,27 @@
             <p class="prevExpression">0</p>
             <p class="currNumber">0</p>
         </div>
-        <ul class="buttons">
-            <li class="forDisplay">C</li>
-            <li class="forDisplay">CE</li>
-            <li class="forDisplay bigButton">+/-</li>
-            <li class="forInput">7</li>
-            <li class="forInput">8</li>
-            <li class="forInput">9</li>
-            <li class="operation">/</li>
-            <li class="forInput">4</li>
-            <li class="forInput">5</li>
-            <li class="forInput">6</li>
-            <li class="operation">*</li>
-            <li class="forInput">1</li>
-            <li class="forInput">2</li>
-            <li class="forInput">3</li>
-            <li class="operation">-</li>
-            <li class="forInput">0</li>
-            <li class="forInput">.</li>
-            <li class="operation">=</li>
-            <li class="operation">+</li>
-        </ul>
+        <div class="buttons">
+            <button class="forDisplay">C</button>
+            <button class="forDisplay">CE</button>
+            <button class="forDisplay bigButton">+/-</button>
+            <button class="forInput">7</button>
+            <button class="forInput">8</button>
+            <button class="forInput">9</button>
+            <button class="operation">/</button>
+            <button class="forInput">4</button>
+            <button class="forInput">5</button>
+            <button class="forInput">6</button>
+            <button class="operation">*</button>
+            <button class="forInput">1</button>
+            <button class="forInput">2</button>
+            <button class="forInput">3</button>
+            <button class="operation">-</button>
+            <button class="forInput">0</button>
+            <button class="forInput decimal">.</button>
+            <button class="operation">=</button>
+            <button class="operation">+</button>
+        </div>
     </div>
 </body>
 
