--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <button class="operation">-</button>
             <button class="forInput">0</button>
             <button class="forInput decimal">.</button>
-            <button class="operation">=</button>
+            <button class="eval">=</button>
             <button class="operation">+</button>
         </div>
     </div>
