Add functionality to "C" - clearAll button

--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@
 <body>
     <div class="frame">
         <div class="display">
-            <p class="prevExpression">0</p>
+            <p class="prevExpression"></p>
             <p class="currNumber">0</p>
         </div>
         <div class="buttons">
-            <button class="forDisplay">C</button>
-            <button class="forDisplay">CE</button>
-            <button class="forDisplay bigButton">+/-</button>
+            <button class="forDisplay clearAll">C</button>
+            <button class="forDisplay clearEntry">CE</button>
+            <button class="forDisplay bigButton negative">+/-</button>
             <button class="forInput">7</button>
             <button class="forInput">8</button>
             <button class="forInput">9</button>
